# AnkiPandas

./: .all-contributorsrc  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  codespell.txt  mlc_config.json  mypy.ini  pyproject.toml  readme.md  readthedocs.yaml  requirements.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: codeql.yml  release.yaml  testing.yaml
ankipandas/: __init__.py  _columns.py  anki_fields.csv  ankidf.py  ankipandas.py  collection.py  columns.py  conftest.py  convenience_functions.py  core.py  core_functions.py  docstring_utils.py  function_interface.py  hash.py  log.py  paths.py  raw.py  version.txt
ankipandas/data/: anki_fields.csv  columns.py
ankipandas/test/: shared.py  test_ankidf.py  test_ankipandas.py  test_collection.py  test_convenience.py  test_core.py  test_paths.py  test_raw.py  test_regression.py  util.py
ankipandas/util/: __init__.py  checksum.py  dataframe.py  docstring_utils.py  docstrings.py  guid.py  log.py  misc.py  types.py
ankipandas/util/test/: test_log.py  (+3 more)
doc/: Makefile  ankidf.rst  classes.rst  collection.rst  conf.py  convenience_functions.rst  core_functions.rst  examples.rst  faq.md  functions.rst  index.rst  paths.rst  projects_with_ap.rst  raw.rst  readme.md  readme.rst  requirements.txt  troubleshooting.rst  util.rst
doc/examples/: col.anki2  loader.py
examples/jupyter_notebooks/: tests.ipynb
hooks/: install_hooks.sh  pre-commit  readme.md
scripts/: clean.sh  release.sh
(+8 files in other folders)
