[metadata]
name = ankipandas
description = Load your anki database as a pandas DataFrame with just one line of code!
url = https://github.com/klieret/ankipandas
version = file: ankipandas/version.txt
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt
python_requires = >=3.7
project_urls =
    Bug Tracker =   https://github.com/klieret/ankipandas/issues
    Documentation = https://ankipandas.readthedocs.io/
    Source Code =   https://github.com/klieret/ankipandas/
keywords =
    anki
    pandas
    dataframe
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Database
    Topic :: Education
    Topic :: Utilities

[options]
packages = find:
include_package_data = True
zip_safe = False


[tool:pytest]
addopts = --cov=ankipandas
